[gd_scene load_steps=3 format=3 uid="uid://bgcrnjnuanx54"]

[ext_resource type="Script" uid="uid://7fyubj8qv30h" path="res://interface/components/dialog.gd" id="1_2sbwa"]
[ext_resource type="Theme" uid="uid://cobdrghm7l5pu" path="res://interface/ui_theme.tres" id="1_ur4r5"]

[node name="Dialog" type="CenterContainer"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2sbwa")

[node name="PanelContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme = ExtResource("1_ur4r5")

[node name="Border" type="ColorRect" parent="PanelContainer"]
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Border" type="ColorRect" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Border" type="ColorRect" parent="PanelContainer/MarginContainer/MarginContainer"]
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/MarginContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "There is a way down"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="BtnDescend" type="Button" parent="PanelContainer/MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("1_ur4r5")
text = "Descend"

[node name="BtnStay" type="Button" parent="PanelContainer/MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Stay"
